--- a/src/components/home/subcomponents/hero-section/HeroSection.css
+++ b/src/components/home/subcomponents/hero-section/HeroSection.css
@@ -27,11 +27,12 @@
 
 #hero a span {
   display: inline-flex;
-  background-color: rgb(0, 0, 92);
+  background-color: lightblue;
+  color: darkblue;
   width: 100px;
-  justify-content: center;
   margin: 1rem;
   padding: 1rem 2rem;
+  justify-content: center;
   border-radius: 0.25rem 1rem;
 }
 
@@ -43,7 +44,7 @@
 
 @keyframes action-button {
   0% {
-    background-color: rgb(0, 0, 92);
+    background-color: lightblue;
     transform: rotate(0);
   }
 
@@ -56,7 +57,7 @@
     transform: rotate(-2deg);
   }
   100% {
-    background-color: rgb(0, 0, 92);
+    background-color: lightblue;
     transform: rotate(0);
   }
 }
