footer lnks hover color

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -16,6 +16,10 @@
   padding: 0.25rem;
 }
 
+.footer-links li a:hover {
+  color: lightblue;
+}
+
 .copyright {
   display: flex;
   justify-content: center;
