--- a/src/components/home/subcomponents/projects/subcomponent/Carousel.css
+++ b/src/components/home/subcomponents/projects/subcomponent/Carousel.css
@@ -1,20 +1,20 @@
 @media screen and (max-width: 768px) {
   .carousel {
     overflow: hidden;
-    width: 400px;
-    height: 320px;
+    width: 360px;
+    height: 120%;
     margin: auto;
     position: relative;
   }
 
   .carousel-container {
     display: flex;
-    height: 320px;
+    height: 120%;
     width: max-content;
   }
 
   .carousel-item {
-    flex: 0 0 400px;
+    flex: 0 0 360px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -24,7 +24,7 @@
   }
 
   .web-image {
-    width: 380px;
+    width: 340px;
     height: auto;
   }
 }
