--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,6 +14,11 @@
 
 .home {
   height: 20px;
-  padding: 0 4rem;
   filter: invert(100%);
+}
+
+@media screen and (min-width: 768px) {
+  .home {
+    padding: 0 4rem;
+  }
 }
