--- a/src/components/home/subcomponents/services/Services.css
+++ b/src/components/home/subcomponents/services/Services.css
@@ -9,43 +9,9 @@ ul li {
 }
 
 .service {
-  margin-bottom: 4rem;
+  padding: 1rem;
 }
 
 .service p {
   margin: 0 1rem;
-}
-
-.tools {
-  padding: 0 1rem;
-}
-
-.tools:hover {
-  animation: wave 2s infinite linear;
-}
-
-@keyframes wave {
-  0% {
-    transform: translateY(0);
-  }
-
-  25% {
-    transform: translateY(4px);
-  }
-  50% {
-    transform: translateY(0);
-  }
-  75% {
-    transform: translateY(-4px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
-.tools-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
 }
