--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,7 +1,19 @@
+#header {
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  background-color: rgb(117, 117, 117) !important;
+  z-index: 100;
+}
+
 #header nav {
   display: flex;
   height: 40px;
   align-items: center;
+  padding: 0 1rem;
 }
 
 #header a:hover {
