--- a/src/components/home/subcomponents/hero-section/HeroSection.css
+++ b/src/components/home/subcomponents/hero-section/HeroSection.css
@@ -1,7 +1,7 @@
 #hero {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  gap: 2rem;
 }
 
 .name {
@@ -14,22 +14,26 @@
 
 .role {
   margin: auto;
+  animation: color 5s infinite;
+  animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .introduction {
-  margin: 4rem auto;
+  margin: 0 auto;
   max-width: 600px;
 }
 
 .message {
-  margin: 4rem auto;
+  margin: 2rem auto;
+  animation: color 5s infinite;
+  animation-timing-function: cubic-bezier(0.47, 0, 0.745, 0.715);
 }
 
 #hero a span {
   display: inline-flex;
   background-color: lightblue;
   color: darkblue;
-  width: 100px;
+  width: 200px;
   margin: 1rem;
   padding: 1rem 2rem;
   justify-content: center;
@@ -39,7 +43,44 @@
 #hero a span:hover {
   transform: scale(120%);
   border: 1px solid white;
-  animation: action-button 5s infinite linear;
+  animation: action-button;
+}
+
+@keyframes color {
+  0% {
+    color: transparent;
+    -webkit-background-clip: text;
+    background-color: black;
+  }
+
+  20% {
+    color: transparent;
+    -webkit-background-clip: text;
+    background-color: rgb(250, 107, 107);
+  }
+
+  40% {
+    color: transparent;
+    -webkit-background-clip: text;
+    background-color: rgb(118, 255, 118);
+  }
+  60% {
+    color: transparent;
+    -webkit-background-clip: text;
+    background-color: rgb(122, 122, 255);
+  }
+
+  80% {
+    color: transparent;
+    -webkit-background-clip: text;
+    background-color: rgb(255, 255, 255);
+  }
+
+  100% {
+    color: transparent;
+    -webkit-background-clip: text;
+    background-color: black;
+  }
 }
 
 @keyframes action-button {
