--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -15,8 +15,8 @@
 }
 
 .footer-links {
-  display: flex;
-  justify-content: space-evenly;
+  padding-left: 2rem;
+  overflow: hidden;
 }
 
 .footer-links h3 {
@@ -36,4 +36,11 @@
   justify-content: center;
 
   padding: 2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-links {
+    display: flex;
+    justify-content: space-evenly;
+  }
 }
