--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,6 +7,7 @@
   padding: 0;
   background-color: rgb(117, 117, 117) !important;
   z-index: 100;
+  box-shadow: 0 0 10px black;
 }
 
 #header nav {
